@@ -11,6 +11,7 @@ inventory:
 * Fix BSD Storages support
 * Don't try to run dmidecode inventories if it returns no output
 * Set Bios && Hardware from /sys/class/dmi on recent Linux when dmidecode is missing
+* Add BSD batteries support
 
 netdiscovery/netinventory:
 * Bump NetDiscovery task version to 2.6
